copied footer/heading fix to other pages, added spacing in on moon page

--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ li a{
 	display: block;
 }
 
-nav ol{
+nav ol, footer ol{
   list-style-type: none;
 }
 
